--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,40 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: white;
+  background-color: black;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html,body{
+  overflow-x:hidden;
+}
+
+body::-webkit-scrollbar{
+  display: none;
+}
+
+.flex{
+  display: flex;
+}
+
+.column{
+  flex-direction: column;
+}
+
+.j-between{
+  justify-content: space-between;
+}
+
+.j-center{
+  justify-content: center;
+}
+
+.a-center{
+  align-items: center;
 }
